--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -7,6 +7,7 @@
           <th class="left" scope="col">Account</th>
           <th class="left" scope="col">Date</th>
           <th class="left" scope="col">Description</th>
+          <th class="left" scope="col">State</th>
           <th class="right" scope="col">Amount</th>
           <th class="right" scope="col">Balance</th>
       
@@ -17,6 +18,7 @@
           <td class="left">{{ transaction.accountNumber }}</td>
           <td class="left">{{ transaction.processingDate | date:'medium'}}</td>
           <td class="left">{{ transaction.description }}</td>
+          <td class="left">{{ transaction.state }}</td>
           <td class="right">{{transaction.transactionType === 1 ? '-' : '+' }}
             {{ transaction.amount | currency }}
         </td>
@@ -27,10 +29,14 @@
     </table>
   </div>
   <hr>
-  <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
   <td>
-  <label class="btn-standard" (click)="openNewTransaction()" ngbButtonLabel>
-    <img class="add-ico" src="/assets/img/add.svg" alt=""> Add New Transaction 
+  <label class="btn-standard" (click)="openNewTransaction()" ngbButtonLabel> Add New Transaction 
+    <img class="add-ico" src="/assets/img/add.svg" alt="">
   </label>
-</td>
+  </td>
+  <td>
+    <label class="btn-standard" (click)="export()" ngbButtonLabel> Export to Excel 
+      <img class="export-ico" src="/assets/img/export.svg" alt="">
+    </label>
+  </td>
 </div>
