--- a/Commerce-Client/src/app/login/login.component.css
+++ b/Commerce-Client/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 body {
     background-color:#006747;
   }
-  #container {
+  .container {
     display: flex;
     max-width:400px;
     margin: auto auto;
