--- a/Commerce-Client/src/app/login/login.component.html
+++ b/Commerce-Client/src/app/login/login.component.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login to Commerce Account</title>
-</head>
 <body>
-  <div id="container">
+  <div class="container">
     <div class="form-wrap">
       <h1>Log In </h1>
       <div class="form-group">
-        <label for="user-name">User Name</label>
-        <input type="text" name="user-name" id="user-name" />
+        <label for="user-name">Username</label>
+        <input type="text" [(ngModel)]="credentials.username"/>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" />
+        <input type="password" [(ngModel)]="credentials.password"/>
       </div>
-      <button type="submit" class="btn">Login</button>
+      <p style="color:red;"> {{ message }}</p>
+      <button class="btn" (click)="login()">Login</button>
     </div>
   </div>
-  
 </body>
-</html>
