--- a/Commerce-Client/src/app/notifications/notifications.component.css
+++ b/Commerce-Client/src/app/notifications/notifications.component.css
@@ -83,6 +83,11 @@
   background-color: #4ba589;
 }
 
+.filters {
+  vertical-align: bottom;
+}
+
 .search {
   margin-top: 15px;
+  margin-left: 10px;
 }
