Added button to reset filters on notifications page

--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -64,6 +64,7 @@
         <label class="btn-primary" ngbButtonLabel>
           <input type="checkbox" ngbButton [(ngModel)]="filters.hasNotifications"> Has Notifications
         </label>
+        <label class="btn-primary search" (click)="resetFilters()" ngbButtonLabel> Reset </label>
         <label class="btn-primary search" (click)="getRules()" ngbButtonLabel> Search </label>
       </div>
     </tr>
