--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -39,7 +39,9 @@
                       [value]="formatter.format(fromDate)"
                       (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
                 <div class="input-group-append">
-                  <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                  <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
+                    <img class="calandar-ico" src="/assets/img/calendar.svg" alt="">
+                  </button>
                 </div>
               </div>
             </div>
@@ -51,7 +53,9 @@
                       [value]="formatter.format(toDate)"
                       (input)="toDate = validateInput(toDate, dpToDate.value)">
                 <div class="input-group-append">
-                  <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                  <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
+                    <img class="calandar-ico" src="/assets/img/calendar.svg" alt="">
+                  </button>
                 </div>
               </div>
             </div>
