--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -35,6 +35,11 @@
   </label>
   </td>
   <td>
+    <label class="btn-standard" (click)="reload()" ngbButtonLabel>
+      <img class="bi bi-bootstrap-reboot" src="/assets/img/refresh.svg" alt=""> Refresh Table 
+    </label>
+  </td>
+  <td>
     <label class="btn-standard" (click)="export()" ngbButtonLabel> Export to Excel 
       <img class="export-ico" src="/assets/img/export.svg" alt="">
     </label>
