--- a/Commerce-Client/src/app/new-transaction/new-transaction.component.html
+++ b/Commerce-Client/src/app/new-transaction/new-transaction.component.html
@@ -7,17 +7,24 @@
   <!-- User ID -->
   <!-- Account Number -->
   <div class="modal-body">
-    <label for="accountNumber"> Account Number </label>
+    <label for="accountNumber"> Account Number : </label>
     <input type="number" min="1" step="any" [(ngModel)]="newTransaction.accountNumber">
 </div>
 <!-- Time -->
-  <div class="modal-body">
-    <table>
-      <tr>
-        <td><label>Date : </label></td>
-        <td><input type = "datetime-local" [(ngModel)]="newTransaction.processingDate"></td>
-      </tr>
-    </table>
+<div class="modal-body">
+  <form class="form-inline">
+    <div class="form-group">
+      <div class="input-group">
+        <input class="form-control" placeholder="yyyy-mm-dd"
+            name="dp" [(ngModel)]="date" ngbDatepicker #d="ngbDatepicker">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"><img class="calandar-ico" src="/assets/img/calendar.svg" alt=""></button>
+          </div>
+      </div>
+    </div>
+  </form>
+    <label for="beginTime">Time </label>
+    <ngb-timepicker [(ngModel)]="time" [meridian]="meridian"></ngb-timepicker>
 </div>
 
   <!-- Amount -->
@@ -33,7 +40,7 @@
 </div>
   <!-- Category -->
 <div class="modal-body">
-  <label for="category">Category </label>
+  <label for="category">Category : </label>
   <select type="category" [(ngModel)]="newTransaction.category">
       <option value="" selected="selected">Select category</option>
       <option value="Food">Food</option>
@@ -48,7 +55,7 @@
 </div>
 <!-- State -->
 <div class="modal-body">
-  <label for="state">Location </label>
+  <label for="state">Location : </label>
   <select type="location" [(ngModel)]="newTransaction.state">
       <option value="" selected="selected">Select a State</option>
       <option value="FOREIGN">Outside of United States</option>
@@ -107,7 +114,7 @@
 </div>
 <!-- Transaction Type -->
 <div class="modal-body">
-  <label for="transactionType">Transaction Type  </label>
+  <label for="transactionType">Transaction Type : </label>
   <select type="category" [(ngModel)]="newTransaction.transactionType">
       <option value="" selected="selected">Select category</option>
       <option value="0">Deposit</option>
