--- a/Commerce-Client/src/app/navigation/navigation.component.html
+++ b/Commerce-Client/src/app/navigation/navigation.component.html
@@ -1,16 +1,27 @@
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-    <a href="https://www.commercebank.com/">
-      <img
-        alt="Commerce Logo"
-        src="assets/img/commerce-bank-logo.png"
-      />
-    </a>
-    <nav class="nav-primary">
-      <a routerLink="notifications">Notifications Dashboard</a>
-      <a routerLink="transactions">Transactions</a>
-    </nav>
-    <a class="logout" routerLink="login" (click)="logout()"> {{ isUserLoggedIn() ? 'Logout' : 'Login' }}
-        <img class="user-ico" src="/assets/img/person-fill.svg" alt="">
-    </a>
-</div>
+<nav class="navbar navbar-expand-md toolbar">
+  <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a href="https://www.commercebank.com/">
+              <img
+                alt="Commerce Logo"
+                src="assets/img/commerce-bank-logo.png"
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" routerLink="notifications">Notifications Dashboard</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" routerLink="transactions">Transactions</a>
+          </li>
+      </ul>
+  </div>
+  <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+      <ul class="navbar-nav ml-auto">
+          <li class="nav-item login">
+            <a class="nav-link" routerLink="login" (click)="logout()"> {{ isUserLoggedIn() ? 'Logout' : 'Login' }}</a>
+          </li>
+      </ul>
+  </div>
+</nav>
