--- a/Commerce-Client/src/app/login/login.component.html
+++ b/Commerce-Client/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <body>
   <div class="container">
     <div class="form-wrap">
+      <img class="icon" src="assets/img/commerce-globe-icon.png" alt=""/>
       <h1>Log In </h1>
       <div class="form-group">
         <label for="user-name">Username</label>
