Added Final presentation. Ran npm update for front end dependencies. Removed commented code

--- a/Commerce-Client/src/app/new-transaction/new-transaction.component.html
+++ b/Commerce-Client/src/app/new-transaction/new-transaction.component.html
@@ -4,14 +4,14 @@
   <span aria-hidden="true">&times;</span>
   </button>
 </div>
-  <!-- User ID -->
   <!-- Account Number -->
   <div class="modal-body">
     <label for="accountNumber"> Account Number : </label>
     <input type="number" min="1" step="any" [(ngModel)]="newTransaction.accountNumber">
 </div>
-<!-- Time -->
+<!-- Processing Date -->
 <div class="modal-body">
+  <span>Processing Date:</span>
   <form class="form-inline">
     <div class="form-group">
       <div class="input-group">
